swapped to save() for saveRDS() the better option

--- a/reports/BHallum_RShuhart_Unit6CaseStudy.Rmd
+++ b/reports/BHallum_RShuhart_Unit6CaseStudy.Rmd
@@ -5,7 +5,8 @@ output: html_notebook
 
 
 ```{r}
-# Training Data
-train <- load("../data/processed/offline.rdf")
+# Data
+train <- readRDS("../data/processed/offline.rds")
+test <- readRDS("../data/processed/online.rds")
 ```
 
